tests/snapshots/integration__integration_tests__post_start_commands__invalid_toml.snap
---
source: tests/integration_tests/post_start_commands.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - feature
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmp2f208J/test-config.toml
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Failed to load project config: TOML parse error at line 1, column 39
  |
1 | post-create-command = [invalid syntax
  |                                       ^
unclosed array, expected `]`
 in .config/wt.toml
